spctr-1504 fixed bottom spacing for all panels

--- a/src/common-editor.scss
+++ b/src/common-editor.scss
@@ -640,7 +640,7 @@ button.components-button.uagb-review-select-btn.is-secondary {
 }
 
 .interface-interface-skeleton__sidebar {
-
+	margin-bottom: 8px;
 	.components-panel[data-uagb-tab="advance"] .block-editor-block-inspector__advanced.uagb-extention-tab {
 		border: none;
 		border-bottom: 1px solid #e0e0e0;
